# uside

./: CMakeLists.txt
cmake/: update_directory.cmake
libraries/absyn/: bnf_skeleton.cpp  bnf_skeleton.h
libraries/absyn/bnf/: bnf_global_vtable_function.h  bnf_include.h  cat.cpp  cat.h  def.cpp  def.h  grammar.cpp  grammar.h  int_list.cpp  int_list.h  item.cpp  item.h  label.cpp  label.h  label_id.cpp  label_id.h  list_def.cpp  list_def.h  list_ident.cpp  list_ident.h  list_int_list.cpp  list_int_list.h  list_integer.cpp  list_integer.h  list_item.cpp  list_item.h  list_prof_item.cpp  list_prof_item.h  list_rhs.cpp  list_rhs.h  list_string.cpp  list_string.h  minimum_size.cpp  minimum_size.h  prof_item.cpp  prof_item.h  reg.cpp  reg.h  rhs.cpp  rhs.h
libraries/glad/include/glad/: glad.h  glad1.h  glad10.h  glad11.h  glad12.h  glad13.h  glad14.h  glad15.h  glad16.h  glad17.h  glad18.h  glad19.h  glad2.h  glad21.h  glad22.h  glad23.h  glad26.h  glad27.h  glad28.h  glad3.h  glad30.h  glad32.h  glad4.h  glad5.h  glad6.h  glad7.h  glad8.h  glad9.h
libraries/glad/src/: glad.c
libraries/glfw/src/: CMakeLists.txt
res/parser/: bnf_path_temp.txt  example.bnf  glsl.bnf  parser.inf  parser_info_path_temp.txt  simple_example.bnf  test.inf
res/parser/templates/: absyn_class_cpp_accept_func_template.txt  absyn_class_cpp_template.txt  absyn_class_template.txt  absyn_class_template_mappings.txt  absyn_class_visit_func_template.txt  absyn_label_class_data_func_template.txt  absyn_label_class_data_var_template.txt  absyn_label_class_template.txt
res/shaders/: simple.fsh  simple.vsh
src/: main.cpp
src/assertion/cpp/: assertion.cpp
src/assertion/h/: assertion.h  assertion_macro.h
src/assertion/include/: assertion_include.h
src/configs/: assertion_config.h  debug_code_config.h  framebuffer_config.h  input_config.h  log_config.h  parser_config.h
src/file/h/: file_flags.h  file_loader.h
src/file/include/: file_include.h
src/frame/cpp/: frame.cpp  frame_manager.cpp
src/frame/h/: frame.h  frame_input_callback_interface.h  frame_manager.h
src/frame/include/: frame_include.h
src/framebuffer/cpp/: framebuffer.cpp
src/framebuffer/h/: framebuffer.h  framebuffer_info.h  framebuffer_texture_attachment.h
src/framebuffer/include/: framebuffer_include.h
src/globals/: debug_code_maco.h  smart_enum_macro.h
src/input/cpp/: input_manager.cpp
src/input/h/: input_listener.h  input_manager.h  mapped_input.h
src/log/cpp/: log_global_mutex.cpp  logger.cpp
src/log/h/: log_flag.h  log_global_mutex.h  log_macro.h  log_pad.h  log_severity_level.h  logger.h
src/logs/cpp/: log_buffer.cpp  log_global_mutex.cpp  log_stream.cpp  logger.cpp
src/logs/h/: log_buffer.h  log_flag.h  log_global_mutex.h  log_macro.h  log_pad.h  log_severity_level.h  log_stream.h  logger.h
src/logs/include/: log_include.h
src/parser/cpp/: bnf_compiler_writer.cpp  bnf_interpreter.cpp  parser.cpp  rule.cpp  rule_item.cpp  state.cpp  symbol.cpp  token.cpp  tokenizer.cpp
src/parser/h/: action_table_element.h  bnf_compiler_terminal_data.h  bnf_compiler_writer.h  bnf_interpreter.h  parser.h  rule.h  rule_item.h  state.h  symbol.h  token.h  tokenizer.h
src/parser/include/: parser_include.h
src/shader/cpp/: image.cpp  sampler.cpp  shader_block.cpp  shader_program.cpp  shader_program_factory.cpp  shader_program_resource_factory.cpp  uniform.cpp
src/shader/h/: active_variable.h  attribute.h  image.h  sampler.h  shader_block.h  shader_program.h  shader_program_factory.h  shader_program_resource_factory.h  uniform.h  uniform_type.h
src/shader/include/: shader_include.h
src/string/h/: string_hash_crc64.h
src/string/include/: string_hash_include.h
src/texture/h/: texture.h
src/texture/include/: texture_include.h
